--- a/src/package.json
+++ b/src/package.json
@@ -366,6 +366,8 @@
 		"node-cache": "^5.1.2",
 		"node-ipc": "^12.0.0",
 		"openai": "^4.78.1",
+    "async-mutex": "^0.5.0",
+    "p-limit": "^6.2.0",
 		"os-name": "^6.0.0",
 		"p-wait-for": "^5.0.2",
 		"pdf-parse": "^1.1.1",
