I've implemented a patch-based checkpoint system for Roo-Code that drastically reduces storage requirements while maintaining full functionality. Here's what I've done: Created core classes for the patch-based checkpoint system: PatchCheckpointService: Main service that handles checkpoint operations PatchDatabase: SQLite database for storing checkpoint metadata PatchGenerator: Utility for generating and applying patches PatchCheckpointServiceFactory: Factory for creating service instances Updated the existing checkpoint system to use the new patch-based implementation: Modified src/core/checkpoints/index.ts to use PatchCheckpointServiceFactory instead of RepoPerTaskCheckpointService Updated Task.ts to use the new PatchCheckpointService type Created a migration system to convert existing Git-based checkpoints to the new patch-based format: MigrationService: Handles migrating existing checkpoints Added a command to trigger the migration: roo-cline.migrateCheckpoints Added tests to verify the implementation works correctly Benefits of the New Implementation Drastically Reduced Storage Requirements: Instead of storing full copies of the workspace for each checkpoint, we now store only the differences between states. Improved Performance: The patch-based system is more efficient, especially for large workspaces. Better Scalability: The system can handle more checkpoints without excessive disk usage. Maintained Compatibility: The new system maintains the same API as the old one, so existing code that uses checkpoints will continue to work

--- a/package.json
+++ b/package.json
@@ -411,6 +411,8 @@
 		"serialize-error": "^11.0.3",
 		"simple-git": "^3.27.0",
 		"sound-play": "^1.1.0",
+		"sqlite": "^5.1.1",
+		"sqlite3": "^5.1.7",
 		"string-similarity": "^4.0.4",
 		"strip-ansi": "^7.1.0",
 		"strip-bom": "^5.0.0",
@@ -445,7 +447,7 @@
 		"esbuild": "^0.25.0",
 		"eslint": "^8.57.0",
 		"execa": "^9.5.2",
-		"glob": "^11.0.1",
+		"glob": "^11.0.2",
 		"husky": "^9.1.7",
 		"jest": "^29.7.0",
 		"jest-simple-dot-reporter": "^1.0.5",
