--- a/.github/workflows/code-qa.yml
+++ b/.github/workflows/code-qa.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Install dependencies
         run: npm run install:all
       - name: Verify all translations are complete
-        run: node scripts/find-missing-translations.js
+        run: npx jest --verbose locales/__tests__/lint-translations.test.ts locales/__tests__/find-missing-i18n-keys.test.ts
 
   knip:
     runs-on: ubuntu-latest
