Add Google Vertex AI and LiteLLM to API Provider options in bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -27,8 +27,10 @@ body:
         - DeepSeek
         - Glama
         - Google Gemini
+        - Google Vertex AI
         - Groq
         - Human Relay Provider
+        - LiteLLM
         - LM Studio
         - Mistral AI
         - Ollama
