--- a/package.json
+++ b/package.json
@@ -448,6 +448,7 @@
 		"glob": "^11.0.1",
 		"husky": "^9.1.7",
 		"jest": "^29.7.0",
+		"jest-mock-extended": "^4.0.0-beta1",
 		"jest-simple-dot-reporter": "^1.0.5",
 		"knip": "^5.44.4",
 		"lint-staged": "^15.2.11",
