Add 'autoCloseAllRooTabs' setting to enhance tab management functionality
- Introduced new setting 'autoCloseAllRooTabs' to allow automatic closure of all Roo-touched tabs during file modification tasks.
- Updated relevant configuration files, types, and UI components to support the new setting.
- Enhanced existing logic in the DiffViewProvider to respect the new auto-close behavior.

--- a/package.json
+++ b/package.json
@@ -323,6 +323,11 @@
 					"type": "boolean",
 					"default": false,
 					"description": "%roo-cline.autoCloseRooTabs.description%"
+				},
+				"roo-cline.autoCloseAllRooTabs": {
+					"type": "boolean",
+					"default": false,
+					"description": "%roo-cline.autoCloseAllRooTabs.description%"
 				}
 			}
 		}
