fix: Update repository and homepage URLs in package.json to reflect new branding; correct base URL in docLinks utility

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/RooVetGit/Roo-Code"
+		"url": "https://github.com/Opensourceful/Apex/"
 	},
-	"homepage": "https://github.com/RooVetGit/Roo-Code",
+	"homepage": "https://github.com/Opensourceful/Apex/",
 	"categories": [
 		"AI",
 		"Chat",
