--- a/.github/workflows/marketplace-publish.yml
+++ b/.github/workflows/marketplace-publish.yml
@@ -1,7 +1,7 @@
 name: Publish Extension
 on:
   pull_request:
-    types: [closed]
+    types: [closed, labeled]
   workflow_dispatch:
 
 env:
@@ -16,8 +16,7 @@ jobs:
     if: >
         ( github.event_name == 'pull_request' &&
         github.event.pull_request.base.ref == 'main' &&
-        contains(github.event.pull_request.title, 'Changeset version bump') ) ||
-        github.event_name == 'workflow_dispatch'
+        github.event.label.name == 'publish' )
     steps:
       - uses: actions/checkout@v4
         with:
