--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -17,6 +17,7 @@
 		"clean": "rimraf build"
 	},
 	"dependencies": {
+		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-checkbox": "^1.1.5",
 		"@radix-ui/react-collapsible": "^1.1.3",
