Add commands to reload and toggle MCP servers; update UI and localization

--- a/package.json
+++ b/package.json
@@ -169,6 +169,16 @@
 				"command": "roo.acceptInput",
 				"title": "%command.acceptInput.title%",
 				"category": "%configuration.title%"
+			},
+			{
+				"command": "extension.reloadAllMcpServers",
+				"title": "Reload All MCP Servers",
+				"icon": "$(sync)"
+			},
+			{
+				"command": "extension.toggleAllMcpServersDisabled",
+				"title": "Toggle All MCP Servers Enabled/Disabled",
+				"icon": "$(power)"
 			}
 		],
 		"menus": {
