--- a/src/package.json
+++ b/src/package.json
@@ -51,16 +51,6 @@
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
-		"submenus": [
-			{
-				"id": "roo-code.contextMenu",
-				"label": "%views.contextMenu.label%"
-			},
-			{
-				"id": "roo-code.terminalMenu",
-				"label": "%views.terminalMenu.label%"
-			}
-		],
 		"viewsContainers": {
 			"activitybar": [
 				{
@@ -166,7 +156,7 @@
 				"category": "%configuration.title%"
 			},
 			{
-				"command": "roo.acceptInput",
+				"command": "roo-cline.acceptInput",
 				"title": "%command.acceptInput.title%",
 				"category": "%configuration.title%"
 			}
@@ -174,11 +164,11 @@
 		"menus": {
 			"editor/context": [
 				{
-					"submenu": "roo-code.contextMenu",
+					"submenu": "roo-cline.contextMenu",
 					"group": "navigation"
 				}
 			],
-			"roo-code.contextMenu": [
+			"roo-cline.contextMenu": [
 				{
 					"command": "roo-cline.addToContext",
 					"group": "1_actions@1"
@@ -194,11 +184,11 @@
 			],
 			"terminal/context": [
 				{
-					"submenu": "roo-code.terminalMenu",
+					"submenu": "roo-cline.terminalMenu",
 					"group": "navigation"
 				}
 			],
-			"roo-code.terminalMenu": [
+			"roo-cline.terminalMenu": [
 				{
 					"command": "roo-cline.terminalAddToContext",
 					"group": "1_actions@1"
@@ -277,6 +267,16 @@
 				}
 			]
 		},
+		"submenus": [
+			{
+				"id": "roo-cline.contextMenu",
+				"label": "%views.contextMenu.label%"
+			},
+			{
+				"id": "roo-cline.terminalMenu",
+				"label": "%views.terminalMenu.label%"
+			}
+		],
 		"configuration": {
 			"title": "%configuration.title%",
 			"properties": {
@@ -323,13 +323,13 @@
 		"pretest": "node esbuild.js",
 		"test": "jest -w=40% && vitest run",
 		"format": "prettier --write .",
-		"build": "pnpm lint && pnpm check-types && node esbuild.js --production --bundle --external:vscode --format=cjs --platform=node && pnpm --filter @roo-code/vscode-webview build",
-		"build:development": "pnpm lint && pnpm check-types && node esbuild.js && pnpm --filter @roo-code/vscode-webview build",
+		"build": "pnpm lint && pnpm check-types && rimraf dist && node esbuild.js --production && rimraf webview-ui && pnpm --filter @roo-code/vscode-webview build",
+		"build:development": "pnpm lint && pnpm check-types && rimraf dist && node esbuild.js && rimraf webview-ui && pnpm --filter @roo-code/vscode-webview build",
 		"publish:marketplace": "vsce publish --no-dependencies && ovsx publish --no-dependencies",
 		"publish": "pnpm vsix && changeset publish && pnpm install --package-lock-only",
 		"version-packages": "changeset version && pnpm install --package-lock-only",
 		"vscode:prepublish": "pnpm build",
-		"vsix": "rimraf dist && rimraf webview-ui && rimraf ../bin && mkdirp ../bin && npx vsce package --no-dependencies --out ../bin",
+		"vsix": "mkdirp ../bin && npx vsce package --no-dependencies --out ../bin",
 		"watch:esbuild": "node esbuild.js --watch",
 		"watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
 		"generate-types": "tsx scripts/generate-types.mts"
