--- a/.github/workflows/nightly-publish.yml
+++ b/.github/workflows/nightly-publish.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -32,7 +34,9 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Count commits
         id: count
-        run: echo "total=$(git rev-list --count HEAD)" >> $GITHUB_OUTPUT
+        run: |
+          git rev-list --count HEAD
+          echo "total=$(git rev-list --count HEAD)" >> $GITHUB_OUTPUT
       - name: Patch package.json version
         env:
           COMMIT_COUNT: ${{ steps.count.outputs.total }}
@@ -46,7 +50,9 @@ jobs:
             console.log(`🔖 Nightly version set to ${pkg.version}`);
           EOF
       - name: Build VSIX
-        run: pnpm build:nightly # Produces bin/roo-code-nightly-0.0.[count].vsix
+        run: |
+          ls -al
+          pnpm build:nightly # Produces bin/roo-code-nightly-0.0.[count].vsix
       - name: Publish to VS Code Marketplace (Nightly channel)
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT_NIGHTLY }}
