--- a/.github/workflows/nightly-publish.yml
+++ b/.github/workflows/nightly-publish.yml
@@ -53,7 +53,7 @@ jobs:
         run: pnpm build:nightly # Produces bin/roo-code-nightly-0.0.[count].vsix
       - name: Publish to VS Code Marketplace (Nightly channel)
         env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT_NIGHTLY }}
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
         run: npx vsce publish --packagePath "bin/$(/bin/ls bin | head -n1)"
       - name: Publish to Open VSX
         env:
