--- a/src/.vscodeignore
+++ b/src/.vscodeignore
@@ -1,6 +1,11 @@
 # Exclude everything
 **
 
+# Include README.md, CHANGELOG.md and LICENSE
+!README.md
+!CHANGELOG.md
+!LICENSE
+
 # Include package.json
 !package.json
 !package.nls.*
@@ -14,9 +19,6 @@
 !webview-ui/build/assets/*.js
 !webview-ui/build/assets/*.ttf
 !webview-ui/build/assets/*.css
-
-# Include the license file
-!LICENSE
 
 # Include default themes JSON files used in getTheme
 !integrations/theme/default-themes/**
