--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 		"node": "20.18.1"
 	},
 	"scripts": {
-		"preinstall": "npx only-allow pnpm",
+		"preinstall": "node scripts/bootstrap.js",
 		"prepare": "husky",
+		"install": "node scripts/bootstrap.js",
+		"install:all": "node scripts/bootstrap.js",
 		"lint": "turbo lint --log-order grouped --output-logs new-only",
 		"check-types": "turbo check-types --log-order grouped --output-logs new-only",
 		"test": "turbo test --log-order grouped --output-logs new-only",
