fix: add compile script to package.json
This commit adds a "compile" script to the root package.json that runs
the TypeScript compilation and bundling steps without creating the final
.vsix package. This is needed for various automation scenarios where we
want to verify the code compiles correctly without producing the final
package.

The compile script runs "pnpm --filter roo-cline bundle" which performs
the core compilation steps without packaging.

Fixes: #3881
Signed-off-by: Eric Wheeler <roo-code@z.ewheeler.org>

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"format": "turbo format --log-order grouped --output-logs new-only",
 		"clean": "turbo clean --log-order grouped --output-logs new-only && rimraf dist out bin .vite-port .turbo",
 		"build": "pnpm --filter roo-cline vsix",
+		"compile": "pnpm --filter roo-cline bundle",
 		"build:nightly": "pnpm --filter @roo-code/vscode-nightly vsix",
 		"changeset:version": "cp CHANGELOG.md src/CHANGELOG.md && changeset version && cp -vf src/CHANGELOG.md .",
 		"knip": "pnpm --filter @roo-code/build build && knip --include files",
