--- a/apps/vscode-e2e/package.json
+++ b/apps/vscode-e2e/package.json
@@ -5,7 +5,7 @@
 		"lint": "eslint src --ext=ts --max-warnings=0",
 		"check-types": "tsc -p tsconfig.esm.json --noEmit",
 		"format": "prettier --write src",
-		"test:ci": "pnpm -w bundle && pnpm test:run",
+		"test:ci": "pnpm -w bundle && pnpm --filter @roo-code/vscode-webview build && pnpm test:run",
 		"test:run": "rimraf out && tsc -p tsconfig.json && npx dotenvx run -f .env.local -- node ./out/runTest.js",
 		"clean": "rimraf out .turbo"
 	},
