Remove onStartupFinished activation event

--- a/src/package.json
+++ b/src/package.json
@@ -46,8 +46,7 @@
 		"roocode"
 	],
 	"activationEvents": [
-		"onLanguage",
-		"onStartupFinished"
+		"onLanguage"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
