feat: Add custom model dimension support and improve codebase indexing
- Add custom embedding dimension configuration for unknown models
- Fix Ollama API implementation to use correct prompt-based structure
- Enhance OpenAI embedder with base URL and dimension support
- Improve UI with provider-specific settings and better model management
- Add comprehensive VSCode settings for codebase indexing feature

**Core Changes:**
- Add `codebaseIndexEmbedderDimension` field to schemas and config
- Implement proper dimension validation and fallback logic
- Support manual dimension override for custom/unknown models

**API Fixes:**
- Fix Ollama embedder to use individual `prompt` requests instead of batch `input`
- Correct response parsing to use `embedding` (singular) field
- Add OpenAI base URL support for proxies and Azure endpoints
- Implement dimension parameter for OpenAI embedding requests

**UI Improvements:**
- Reorganize settings with provider-specific sections
- Replace model dropdown with flexible text input
- Add dimension input field with validation
- Improve placeholder text and help descriptions
- Add OpenAI base URL configuration field

**Configuration:**
- Add VSCode settings for all codebase indexing options
- Enhance config manager with proper dimension handling
- Improve service factory with better error messages
- Add comprehensive validation for custom models

--- a/src/package.json
+++ b/src/package.json
@@ -313,6 +313,57 @@
 					"type": "string",
 					"default": "",
 					"description": "%settings.customStoragePath.description%"
+				},
+				"roo-cline.codebaseIndexEnabled": {
+					"type": "boolean",
+					"default": false,
+					"description": "Enable codebase indexing for semantic search.",
+					"scope": "resource"
+				},
+				"roo-cline.codebaseIndexEmbedderProvider": {
+					"type": "string",
+					"enum": [
+						"openai",
+						"ollama"
+					],
+					"default": "openai",
+					"description": "Select the embedding provider (OpenAI or Ollama).",
+					"scope": "resource"
+				},
+				"roo-cline.codebaseIndexEmbedderBaseUrl": {
+					"type": "string",
+					"default": "",
+					"description": "Optional: Base URL for the selected embedding provider API (e.g., for proxies, Azure OpenAI, or self-hosted Ollama).",
+					"scope": "resource"
+				},
+				"roo-cline.codebaseIndexEmbedderModelId": {
+					"type": "string",
+					"default": "",
+					"description": "Optional: Specify a custom embedding model ID. Leave empty to use the provider's default (e.g., text-embedding-3-small for OpenAI).",
+					"scope": "resource"
+				},
+				"roo-cline.codebaseIndexEmbedderDimension": {
+					"type": [
+						"number",
+						"null"
+					],
+					"default": null,
+					"description": "Optional: Specify the embedding dimension for your custom model ID if it's not automatically recognized. Required only if using an unknown model ID.",
+					"scope": "resource"
+				},
+				"roo-cline.codebaseIndexQdrantUrl": {
+					"type": "string",
+					"default": "http://localhost:6333",
+					"description": "URL for the Qdrant vector database instance.",
+					"scope": "resource"
+				},
+				"roo-cline.codebaseIndexSearchMinScore": {
+					"type": "number",
+					"default": 0.4,
+					"minimum": 0,
+					"maximum": 1,
+					"description": "Minimum similarity score (0-1) for codebase search results.",
+					"scope": "resource"
 				}
 			}
 		}
