--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -38,7 +38,6 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
-		"config-rocket": "^0.6.1",
 		"date-fns": "^4.1.0",
 		"debounce": "^2.1.1",
 		"fast-deep-equal": "^3.1.3",
@@ -61,6 +60,7 @@
 		"rehype-highlight": "^7.0.0",
 		"remark-gfm": "^4.0.1",
 		"remove-markdown": "^0.6.0",
+		"roo-rocket": "^0.5.1",
 		"shell-quote": "^1.8.2",
 		"shiki": "^3.2.1",
 		"source-map": "^0.7.4",
