fix: ensure types are built before launching
This fixes the issue where F5 fails after a fresh clone because
the types package is not built yet. The fix adds a build:roo-code-types
task that runs before any watchers start.

Adds the build task as a dependency to the watch task, ensuring
the types are properly built at least once before the extension
launches.

Fixes: #4011
Signed-off-by: Eric Wheeler <roo-code@z.ewheeler.org>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 	"tasks": [
 		{
 			"label": "watch",
-			"dependsOn": ["webview", "watch:tsc", "watch:esbuild"],
+			"dependsOn": ["webview", "watch:tsc", "watch:esbuild", "watch:roo-code-types"],
 			"presentation": {
 				"reveal": "never"
 			},
@@ -64,6 +64,28 @@
 			"command": "pnpm --filter roo-cline watch:tsc",
 			"group": "build",
 			"problemMatcher": "$tsc-watch",
+			"isBackground": true,
+			"presentation": {
+				"group": "watch",
+				"reveal": "always"
+			}
+		},
+		{
+			"label": "watch:roo-code-types",
+			"type": "shell",
+			"command": "pnpm --filter @roo-code/types watch",
+			"group": "build",
+			"problemMatcher": {
+				"owner": "tsup",
+				"pattern": {
+					"regexp": "^$"
+				},
+				"background": {
+					"activeOnStart": true,
+					"beginsPattern": ".*Build start.*",
+					"endsPattern": ".*Build success.*|.*Build failed.*"
+				}
+			},
 			"isBackground": true,
 			"presentation": {
 				"group": "watch",
