Add import tests for @roo-code/types

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -20,7 +20,7 @@
 		"roo-code",
 		"ai"
 	],
-	"main": "./dist/index.cjs",
+	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"exports": {
