--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,14 +2,14 @@
 	"name": "@roo-code/types",
 	"version": "0.0.0",
 	"type": "module",
-	"main": "./dist/index.js",
+	"main": "./dist/index.cjs",
 	"exports": {
 		".": {
 			"types": "./src/index.ts",
 			"import": "./src/index.ts",
 			"require": {
 				"types": "./dist/index.d.cts",
-				"default": "./dist/index.js"
+				"default": "./dist/index.cjs"
 			}
 		}
 	},
