--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -3,6 +3,6 @@
 	"compilerOptions": {
 		"paths": { "@/*": ["./src/*"] }
 	},
-	"include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts"],
+	"include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts", "drizzle.config.ts"],
 	"exclude": ["node_modules"]
 }
