feat: implement internal feature flags system
- Add support for internal-only feature flags that are hidden from users
- Add validation script to ensure internal flags are properly configured
- Add CI validation step in nightly-publish workflow
- Add telemetry tracking for internal flag usage
- Add comprehensive tests for internal flag functionality
- Add documentation explaining the internal flag system
- Filter internal flags from experimental settings UI

This allows the team to test features internally without exposing them
to users in the experimental settings.

--- a/.github/workflows/nightly-publish.yml
+++ b/.github/workflows/nightly-publish.yml
@@ -36,6 +36,13 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      - name: Enable Internal Feature Flags
+        run: |
+          # Set environment variable for nightly build
+          echo "ROO_CODE_NIGHTLY=true" >> $GITHUB_ENV
+          
+          # Log enabled experiments
+          node scripts/log-experiments.js
       - name: Forge numeric Nightly version
         id: version
         env:
