--- a/.github/workflows/nightly-publish.yml
+++ b/.github/workflows/nightly-publish.yml
@@ -36,11 +36,8 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      - name: Enable Internal Feature Flags
+      - name: Log Internal Experiments
         run: |
-          # Set environment variable for nightly build
-          echo "ROO_CODE_NIGHTLY=true" >> $GITHUB_ENV
-          
           # Log enabled experiments
           node scripts/log-experiments.js
       - name: Forge numeric Nightly version
