--- a/apps/web-evals/package.json
+++ b/apps/web-evals/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@evals/web",
+	"name": "@roo-code/web-evals",
 	"private": true,
 	"scripts": {
 		"lint": "next lint",
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@roo-code/evals": "workspace:^",
+		"@roo-code/ipc": "workspace:^",
 		"@roo-code/types": "workspace:^",
 		"@hookform/resolvers": "^4.1.3",
 		"@radix-ui/react-alert-dialog": "^1.1.7",
@@ -35,8 +36,8 @@
 		"next-themes": "^0.4.6",
 		"p-map": "^7.0.3",
 		"ps-tree": "^1.2.0",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.54.2",
 		"react-use": "^17.6.0",
 		"sonner": "^2.0.2",
@@ -50,8 +51,8 @@
 		"@roo-code/config-typescript": "workspace:^",
 		"@tailwindcss/postcss": "^4",
 		"@types/ps-tree": "^1.1.6",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
 		"tailwindcss": "^4"
 	}
 }
