--- a/apps/web-evals/package.json
+++ b/apps/web-evals/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"lint": "next lint",
 		"check-types": "tsc -b",
-		"dev": "dotenvx run -f ../../.env -- next dev --turbopack",
+		"dev": "next dev --turbopack",
 		"format": "prettier --write src",
 		"build": "next build",
 		"start": "next start"
@@ -32,7 +32,7 @@
 		"cmdk": "^1.1.0",
 		"fuzzysort": "^3.1.0",
 		"lucide-react": "^0.511.0",
-		"next": "15.3.3",
+		"next": "^15.2.5",
 		"next-themes": "^0.4.6",
 		"p-map": "^7.0.3",
 		"ps-tree": "^1.2.0",
