--- a/packages/evals/package.json
+++ b/packages/evals/package.json
@@ -7,27 +7,30 @@
 	"scripts": {
 		"lint": "eslint src --ext=ts --max-warnings=0",
 		"check-types": "tsc --noEmit",
-		"test": "vitest run",
+		"test": "dotenvx run -f .env.test -- vitest run",
 		"clean": "rimraf dist .turbo",
-		"drizzle-kit": "dotenvx run -f .env -- tsx node_modules/drizzle-kit/bin.cjs",
+		"drizzle-kit": "dotenvx run -f .env.development -- tsx node_modules/drizzle-kit/bin.cjs",
+		"drizzle-kit:test": "dotenvx run -f .env.test -- tsx node_modules/drizzle-kit/bin.cjs",
+		"db:start": "docker compose up -d",
+		"db:stop": "docker compose down",
 		"db:generate": "pnpm drizzle-kit generate",
 		"db:migrate": "pnpm drizzle-kit migrate",
 		"db:push": "pnpm drizzle-kit push",
-		"db:pull": "pnpm drizzle-kit pull",
 		"db:check": "pnpm drizzle-kit check",
-		"db:up": "pnpm drizzle-kit up",
-		"db:studio": "pnpm drizzle-kit studio"
+		"db:test:push": "pnpm drizzle-kit:test push",
+		"db:test:check": "pnpm drizzle-kit:test check"
 	},
 	"dependencies": {
-		"@libsql/client": "^0.15.8",
 		"@roo-code/ipc": "workspace:^",
 		"@roo-code/types": "workspace:^",
+		"better-sqlite3": "^11.10.0",
 		"drizzle-orm": "^0.44.1",
 		"execa": "^9.5.2",
 		"gluegun": "^5.2.0",
 		"node-ipc": "^12.0.0",
 		"p-map": "^7.0.3",
 		"p-wait-for": "^5.0.2",
+		"postgres": "^3.4.7",
 		"ps-tree": "^1.2.0",
 		"zod": "^3.24.2"
 	},
@@ -39,6 +42,6 @@
 		"@types/ps-tree": "^1.1.6",
 		"drizzle-kit": "^0.31.1",
 		"tsx": "^4.19.3",
-		"vitest": "^3.1.3"
+		"vitest": "^3.2.0"
 	}
 }
