--- a/packages/evals/package.json
+++ b/packages/evals/package.json
@@ -7,8 +7,9 @@
 	"scripts": {
 		"lint": "eslint src --ext=ts --max-warnings=0",
 		"check-types": "tsc --noEmit",
-		"test": "dotenvx run -f .env.test -- vitest run",
+		"_test": "dotenvx run -f .env.test -- vitest run",
 		"clean": "rimraf dist .turbo",
+		"cli": "dotenvx run -f .env.development -- tsx src/cli/index.ts",
 		"drizzle-kit": "dotenvx run -f .env.development -- tsx node_modules/drizzle-kit/bin.cjs",
 		"drizzle-kit:test": "dotenvx run -f .env.test -- tsx node_modules/drizzle-kit/bin.cjs",
 		"db:start": "docker compose up -d",
@@ -24,9 +25,9 @@
 		"@roo-code/ipc": "workspace:^",
 		"@roo-code/types": "workspace:^",
 		"better-sqlite3": "^11.10.0",
+		"cmd-ts": "^0.13.0",
 		"drizzle-orm": "^0.44.1",
-		"execa": "^9.5.2",
-		"gluegun": "^5.2.0",
+		"execa": "^9.6.0",
 		"node-ipc": "^12.0.0",
 		"p-map": "^7.0.3",
 		"p-wait-for": "^5.0.2",
