--- a/packages/evals/package.json
+++ b/packages/evals/package.json
@@ -9,7 +9,7 @@
 		"check-types": "tsc --noEmit",
 		"_test": "dotenvx run -f .env.test -- vitest run",
 		"clean": "rimraf dist .turbo",
-		"cli": "dotenvx run -f .env.development -- tsx src/cli/index.ts",
+		"cli": "dotenvx run -f .env.development .env.local -- tsx src/cli/index.ts",
 		"drizzle-kit": "dotenvx run -f .env.development -- tsx node_modules/drizzle-kit/bin.cjs",
 		"drizzle-kit:test": "dotenvx run -f .env.test -- tsx node_modules/drizzle-kit/bin.cjs",
 		"db:start": "docker compose up -d",
